--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     background-color: #64B5F6;
     background: linear-gradient(to right bottom, #03A9F4 39.9%, #039BE5 50%);
     padding-top: 50px;
-
 }
 
 .inner-box {
@@ -24,6 +23,7 @@
     color:#f5f5f5;
     text-decoration:none;
     font-size:22px;
+    transition: all 0.2s ease;
 }
 
 
@@ -35,7 +35,7 @@
 *:focus {outline:none !important;
         font-weight:bold;
 
-    
+
 }
 
 
